--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dzy-china/hsphp",
+    "name": "dzy-china/RabbitPHP",
     "description": "a php framework",
     "type": "project",
     "license": "Apache-2.0",
