--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     "minimum-stability": "dev",
     "require": {},
 	"autoload":{
-		"core\\":"core",
-		"web\\":"web"
+		"psr-4": {
+			"core\\":"core",
+			"web\\":"web"
+		}
 	}
 }
